# stablecore-geometry

./: .gitignore  CMakeLists.txt  CMakePresets.json  GenerateGeometryVS2022.bat  README.md  generate_vs_solution.bat
.github/workflows/: ci-autofix-on-failure.yml  ci-windows-cmake.yml
Include/: Geometry.h
Include/Brep/: BodyBoolean.h  BrepConversion.h  BrepEditing.h  Healing.h  MeshConversion.h  MeshOps.h  MeshRepair.h  PolyhedronBody.h  PolyhedronFace3d.h  PolyhedronLoop3d.h  SCBrepBody.h  SCBrepCoedge.h  SCBrepEdge.h  SCBrepFace.h  SCBrepLoop.h  SCBrepShell.h  SCBrepVertex.h  Tessellation.h  Topology.h
Include/Core/: Algorithms.h  AxisOps.h  Boolean.h  Editing.h  GeometryApi.h  GeometryTypes.h  GeometryTypesFwd.h  GeometryTypesPrimitives.h  Intersection.h  Measure.h  Metrics.h  Offset.h  Projection.h  Relation.h  Results.h  Sampling.h  SearchPoly.h  Section.h  ShapeOps.h  Transform.h  Validation.h
Include/Export/: GeometryExport.h
Include/Geometry2d/: ISCSegment2d.h  SCArcSegment2d.h  SCBoxTree2d.h  SCCircle2d.h  SCEllipse2d.h  SCKDTree2d.h  SCLineSegment2d.h  SCMultiPolygon2d.h  SCMultiPolyline2d.h  SCPathOps.h  SCPolygon2d.h  SCPolyline2d.h  SCRectangle2d.h  SCSegmentSearch2d.h  SegmentTypes.h
Include/Geometry3d/: ISCCurve3d.h  ISCSurface.h  SCCurveOnSurface.h  SCLineCurve3d.h  SCNurbsCurve3d.h  SCNurbsSurface.h  SCOffsetSurface.h  SCPlaneSurface.h  SCRuledSurface.h  TriangleMesh.h
Include/Serialize/: GeometryText.h
Include/Support/: Epsilon.h
Include/Support/Geometry2d/: Normalize2.h  Predicate2.h
Include/Types/Geometry2d/: SCBox2.h  SCPoint2.h  SCVector2.h
Include/Types/Geometry3d/: SCBox3.h  SCDirection3d.h  SCIntervald.h  SCLine3d.h  SCLineSegment3d.h  SCMatrix3d.h  SCPlane.h  SCPoint3.h  SCRay3d.h  SCTransform3d.h  SCTriangle3d.h  SCVector3.h
Source/Brep/: BodyBoolean.cpp  BrepConversion.cpp  BrepEditing.cpp  Healing.cpp  MeshConversion.cpp  MeshOps.cpp  MeshRepair.cpp  Tessellation.cpp  Topology.cpp
Source/Core/: Algorithms.cpp  AxisOps.cpp  Boolean.cpp  Editing.cpp  Intersection.cpp  Measure.cpp  Metrics.cpp  Offset.cpp  Projection.cpp  Relation.cpp  RingIntegral2d.h  Sampling.cpp  SearchPoly.cpp  Section.cpp  ShapeOps.cpp  Transform.cpp  Validation.cpp
Source/Geometry2d/: ArcSegment2d.cpp  LineSegment2d.cpp  MultiPolygon2d.cpp  MultiPolyline2d.cpp  Polygon2d.cpp  Polyline2d.cpp  SCBoxTree2d.cpp  SCCircle2d.cpp  SCEllipse2d.cpp  SCKDTree2d.cpp  SCPathOps.cpp  SCRectangle2d.cpp  SCSegmentSearch2d.cpp
Source/Geometry3d/: Intersection3d.cpp  PlaneSurface.cpp  Projection3d.cpp  Relation3d.cpp
Source/Serialize/: GeometryText.cpp
Source/Support/: Epsilon.cpp
UnitTests/Support/: Fixtures3d.h  GeometryTestSupport.h
docs/: box-design.md  cloud-ci-handoff.md  coding-style.md  curve3d-surface-design.md  delphi-geometry-parity.md  delphi-interface-fasttrack.md  delphi-test-fasttrack-matrix.md  design-doc-sync-tracker.md  export-design.md  final-naming-plan.md  geometry-3d-library-design.md  geometry-3d-services-design.md  geometry-3d-types-design.md  library-design.md  next-task-prompt.md  polyhedron-brep-design.md  polyline-design.md  rename-followup-todo.md  sdk-2d-api-convergence.md  sdk-design.md  segment-design.md  session-handoff.md  test-capability-coverage.md  trianglemesh-mesh-conversion-design.md
docs/archive/: README.md  box-design.md  cloud-ci-handoff.md
include/algorithm/: Predicate2.h
include/export/: GeometryExport.h
include/sdk/: ArcSegment2d.h  BrepBody.h  BrepEdge.h  BrepFace.h  BrepShell.h  Circle2d.h  Curve3d.h  CurveOnSurface.h  Ellipse2d.h  Geometry.h  GeometryAlgorithms.h  GeometryApi.h  GeometryBrepEditing.h  GeometryConvert.h  GeometryHealing.h  GeometryIntersection.h  GeometryMeasure.h  GeometryMeshConversion.h  GeometryMeshOps.h  GeometryMeshRepair.h  GeometryMetrics.h  GeometryOffset.h  GeometryPathOps.h  GeometryProjection.h  GeometryRelation.h  GeometrySearchPoly.h  GeometrySection.h  GeometryShapeOps.h  GeometryTessellation.h  GeometryTopology.h  GeometryTypes.h  GeometryValidation.h  LineCurve3d.h  LineSegment2d.h  MultiPolygon2d.h  MultiPolyline2d.h  NurbsCurve3d.h  NurbsSurface.h  OffsetSurface.h  PlaneSurface.h  (+10 more)
include/types/: ArcSegment2.h  Box2.h  Box3.h  Interval.h  Line3.h  LineSegment2.h  Plane.h  Point3.h  Polygon2.h  Polyline2.h  Segment2.h  Vector3.h
scripts/: ci-autofix.ps1
src/sdk/: ArcSegment2d.cpp  Circle2d.cpp  Ellipse2d.cpp  GeometryAlgorithms.cpp  GeometryBodyBoolean.cpp  GeometryBoolean.cpp  GeometryBoxTree.cpp  GeometryBrepConversion.cpp  GeometryBrepEditing.cpp  GeometryHealing.cpp  GeometryIntersection3d.cpp  GeometryKDTree.cpp  GeometryMeasure.cpp  GeometryMeshConversion.cpp  GeometryMeshOps.cpp  GeometryMeshRepair.cpp  GeometryMetrics.cpp  GeometryOffset.cpp  GeometryPathOps.cpp  GeometryProjection.cpp  GeometryProjection3d.cpp  GeometryRelation3d.cpp  GeometrySearchPoly.cpp  GeometrySection.cpp  GeometryShapeOps.cpp  GeometryTessellation.cpp  GeometryTopology.cpp  GeometryValidation.cpp  LineSegment2d.cpp  MultiPolygon2d.cpp  MultiPolyline2d.cpp  Polygon2d.cpp  Polyline2d.cpp  Rectangle2d.cpp
src/serialize/: GeometryText.cpp
tests/: CMakeLists.txt  test_box.cpp  test_offset.cpp  test_point_vector.cpp  test_polygon.cpp  test_polyline.cpp  test_relation_boolean.cpp  test_sdk.cpp  test_segment.cpp  test_shapes_pathops.cpp  test_topology_indexing.cpp
tests/capabilities/: test_3d_body_boolean_sdk.cpp  test_3d_brep.cpp  test_3d_conversion.cpp  test_3d_healing.cpp  test_3d_section.cpp  test_box.cpp  test_offset.cpp  test_point_vector.cpp  test_polygon.cpp  test_polyline.cpp  test_relation_boolean.cpp  test_sdk.cpp  test_sdk_algorithms.cpp  test_sdk_multigeometry.cpp  test_sdk_umbrella.cpp  test_searchpoly_sdk.cpp  test_segment.cpp  test_shapes_pathops.cpp  test_topology_indexing.cpp
tests/gaps/: test_3d_body_boolean_gaps.cpp  test_3d_brep_gaps.cpp  test_3d_conversion_gaps.cpp  test_3d_healing_gaps.cpp  test_3d_section_gaps.cpp  test_offset_gaps.cpp  test_relation_gaps.cpp  test_searchpoly_gaps.cpp
tests/support/: Fixtures3d.h  GeometryTestSupport.h
(+30 files in other folders)
